--- a/newcastle/manifest.json
+++ b/newcastle/manifest.json
@@ -1,18 +1,17 @@
 {
   "name": "Share to Newcastle",
   "short_name": "Newcastle",
-  "start_url": "/miniature-octo-garbanzo/newcastle/",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
-  "icons": [{ "src": "../icon.png", "sizes": "512x512", "type": "image/png" }],
+  "icons": [
+    { "src": "../icon.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "../icon.png", "sizes": "512x512", "type": "image/png" }
+  ],
   "share_target": {
-    "action": "/miniature-octo-garbanzo/newcastle/upload",
+    "action": "./upload", 
     "method": "POST",
     "enctype": "multipart/form-data",
-    "params": {
-      "files": [{
-        "name": "photos",
-        "accept": ["image/*"]
-      }]
-    }
+    "params": { "files": [{ "name": "photos", "accept": ["image/*"] }] }
   }
 }
