--- a/newcastle/manifest.json
+++ b/newcastle/manifest.json
@@ -5,8 +5,8 @@
   "scope": "./",
   "display": "standalone",
   "icons": [
-    { "src": "../icon.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "../icon.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "../small_icon.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "../large_icon.png", "sizes": "512x512", "type": "image/png" }
   ],
   "share_target": {
     "action": "./upload", 
