update appearance per channel

--- a/newcastle/manifest.json
+++ b/newcastle/manifest.json
@@ -1,12 +1,12 @@
 {
-  "name": "Share to Newcastle",
+  "name": "Newcastle Photo Share",
   "short_name": "Newcastle",
   "start_url": "/miniature-octo-garbanzo/newcastle/",
   "scope": "./",
   "display": "standalone",
   "icons": [
-    { "src": "../small_icon.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "../large_icon.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "./small_icon.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "./large_icon.png", "sizes": "512x512", "type": "image/png" }
   ],
   "share_target": {
     "action": "./upload", 
